Fix wrapping in menu.

--- a/_assets/stylesheets/components/_common.scss
+++ b/_assets/stylesheets/components/_common.scss
@@ -6,7 +6,7 @@ nav {
   border-bottom: 1px solid $cyan_lighted;
 
   ul {
-    width: 800px;
+    width: 810px;
     margin: 0 auto;
     padding-left: 0;
 
